tests/ui/async-await/unresolved_type_param.stderr
error[E0282]: type annotations needed
  --> $DIR/unresolved_type_param.rs:9:5
   |
LL |     bar().await;
   |     ^^^ cannot infer type of the type parameter `T` declared on the function `bar`
   |
help: consider specifying a concrete type for the generic type `T`
   |
LL |     bar::<SomeConcreteType>().await;
   |        ++++++++++++++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0282`.
